fix main field in package.json

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "simple-router",
   "version": "0.1.0",
   "description": "Simple-router is a middleware-compatible router with promises support.",
-  "main": "index.js",
+  "main": "lib/index.js",
   "dependencies": {
     "bluebird": "~1.0.1",
     "connect-stack": "~0.1.5"
