--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "simple-router",
   "version": "0.2.2",
-  "description": "Simple-router is a middleware-compatible router with promises support.",
+  "description": "Simple-router is a middleware-compatible router with support for promises.",
   "main": "lib/index.js",
   "dependencies": {
     "bluebird": "~1.0.1",
