--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "fast-url-parser": "~1.0.6-0"
   },
   "devDependencies": {
-    "tape": "~2.3.2"
+    "tape": "~2.3.2",
+    "through2": "^0.4.1"
   },
   "scripts": {
     "test": "node test/index.js"
