--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "simple-router",
-  "version": "0.4.0",
+  "version": "0.4.1",
   "description": "Simple-router is a middleware-compatible router with support for promises.",
   "main": "lib/index.js",
+  "types": "index.d.ts",
   "dependencies": {
     "bluebird": "^2.3.10",
     "connect-stack": "~0.1.6",
