--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "simple-router",
-  "version": "0.4.1",
+  "version": "0.4.2",
   "description": "Simple-router is a middleware-compatible router with support for promises.",
   "main": "lib/index.js",
   "types": "index.d.ts",
   "dependencies": {
+    "@types/express": "^4.16.0",
     "bluebird": "^2.3.10",
     "connect-stack": "~0.1.6",
     "fast-url-parser": "^1.0.6-0",
